problem with scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,11 +2,12 @@
 @import "./components/body";
 @import "./components/logo";
 @import "./components/page-header";
-@import "./components/footer.scss";
+@import "./components/footer";
 @import "./components/main-page";
 @import "./components/block";
 @import "./components/aboutus";
-@import "./components/ourteam.scss";
+@import "./components/ourteam";
 @import "./components/our-clients";
 @import "./components/modal";
 @import "./components/portfolio";
+@import "./components/modal-menu";
