--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -7,12 +7,8 @@ body {
 main {
   background-color: $secondaryColor;
 }
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .container {
-  width: 1200px;
+  min-width: 320px;
   margin: 0 auto;
 }
 ul {
@@ -21,7 +17,7 @@ ul {
 }
 h2 {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
 }
 h5 {
@@ -30,7 +26,6 @@ h5 {
   line-height: 1.17;
 }
 h4 {
-  width: 448px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
