--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -1,42 +1,46 @@
 .main-page {
+  width: 480px;
+  height: 400px;
   background-color: $secondaryBackgroundColor;
   background-image: linear-gradient(
       0deg,
       rgba(47, 48, 58, 0.4) 0%,
       rgba(47, 48, 58, 0.4) 100%
     ),
-    url("../images/header/Img-header.jpg");
+    url("/images/header/Img-header_480_400.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  max-width: 1600px;
+  width: 480px;
   margin: 0 auto;
-  &__title {
-    color: $secondaryColor;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    width: 696px;
-    margin-top: 200px;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  &__button {
-    background-color: $logoWebColor;
-    color: $secondaryColor;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    cursor: pointer;
-    border: 0px solid;
-    border-radius: 4px;
-    width: 200px;
-    margin-top: 30px;
-    margin-bottom: 200px;
-    padding: 10px 41px 10px 42px;
-  }
+  margin-bottom: 60px;
 }
-&__overlay {
+
+.main-page__title {
+  color: $secondaryColor;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.61;
+  width: 365px;
+  margin-top: 118px;
+  margin-bottom: 0;
+  text-align: center;
+}
+.main-page__button {
+  background-color: $logoWebColor;
+  color: $secondaryColor;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  cursor: pointer;
+  border: 0px solid;
+  border-radius: 4px;
+  width: 200px;
+  margin-top: 30px;
+  margin-bottom: 118px;
+  padding: 10px 41px 10px 42px;
+}
+.main-page__overlay {
   display: flex;
   align-items: center;
   flex-direction: column;
