--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
   position: fixed;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -33,26 +33,30 @@
 .form-group {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-content: center;
   padding: 40px;
-  &__label {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: var(--alternative-color);
-    margin-top: 10px;
-  }
 }
-&__label--name {
+.form-group__headline {
+  text-align: center;
+}
+.form-group__label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--alternative-color);
+  margin-top: 10px;
+}
+
+.form-group__label--name {
   margin-top: 12px;
   position: relative;
 }
 
-&__icon {
+.form-group__icon {
   margin: 11px 12px;
 }
-&__input {
+.form-group__input {
   border-radius: 4px;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -62,7 +66,7 @@
   width: 100%;
 }
 
-&__btn {
+.form-group__btn {
   width: 200px;
   height: 50px;
   margin: 30px auto;
@@ -86,7 +90,7 @@
   }
 }
 
-&_grid {
+.form-group__grid {
   display: flex;
   width: 100%;
   height: 40px;
@@ -95,8 +99,8 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &--textarea {
-    width: 448px;
-    height: 120px;
+    width: 370px;
+    height: 138px;
     resize: none;
     outline: 0;
     &::placeholder {
@@ -108,15 +112,15 @@
     }
   }
 }
-&__grid:hover,
-&__grid:focus {
+.form-group__grid:hover,
+.form-group__grid:focus {
   border: 1px solid $logoWebColor;
   border-radius: 4px;
   & svg {
     fill: $logoWebColor;
   }
 }
-&__grid:has(input:focus) {
+.form-group__grid:has(input:focus) {
   border: 1px solid $logoWebColor;
   border-radius: 4px;
   & svg {
@@ -129,13 +133,13 @@
   cursor: pointer;
   width: 30px;
   height: 30px;
-  left: 490px;
+  left: 412px;
   top: 8px;
   background: $secondaryColor;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
-&__icon {
+.close__icon {
   position: absolute;
   left: 22.23%;
   top: 16.67%;
@@ -160,22 +164,22 @@
 
 .check__link {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: $logoWebColor;
 }
-&__text {
+.check__text {
   width: 100%;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: $alternativeColor;
   cursor: pointer;
 }
 
-&__grid {
+.check__grid {
   width: 100%;
   display: flex;
   margin-top: 20px;
@@ -183,7 +187,6 @@
   gap: 8px;
 }
 
-&__icon {
-  margin-top: 5px;
+.check__icon {
   margin-left: -21px;
 }
