--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -1,45 +1,49 @@
 .ourteam {
   background-color: $thirdBackgroundColor;
+  min-width: 480px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  &__delay {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
-&__delay {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-&__list {
-  display: flex;
-  width: 1170px;
-  gap: 30px;
+.ourteam__list {
   margin: 0;
 }
 
-&__item {
+.ourteam__item {
   display: flex;
-  flex-basis: calc((100% - 3 * 30px) / 4);
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: 0 auto;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: $secondaryColor;
 }
-
-&__headline {
-  width: 209px;
-  margin-bottom: 50px;
+.ourteam__item:not(:last-child) {
+  margin-bottom: 30px;
 }
-&__name {
+.ourteam__item:last-child {
+  margin-bottom: 60px;
+}
+.ourteam__headline {
+  width: 163px;
+  margin-bottom: 30px;
+  margin-top: 60px;
+}
+.ourteam__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.17;
   margin: 30px 99px 10px 99px;
 }
-&__position {
+.ourteam__position {
   color: $alternativeColor;
   font-size: 16px;
   line-height: 1.17;
