--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -7,45 +7,44 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-}
-&__name {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  width: 322px;
-  padding-left: 24px;
-  margin-top: 20px;
-  margin-bottom: 4px;
-}
-&__description {
-  color: $alternativeColor;
-  font-size: 16px;
-  line-height: 1.87;
-  width: 322px;
-  padding-left: 24px;
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-
-&__overlay {
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  padding: 49px 45px 49px 24px;
-  background-color: rgba(33, 150, 243, 0.9);
-  font-weight: 400;
-  font-size: 18px;
-  color: $secondaryColor;
-  top: 0;
-  left: 0;
-  transform: translateY(100%);
-  transition: transform 250ms ease;
-}
-&__item {
-  position: relative;
-  width: 370px;
-  height: 294px;
-  overflow: hidden;
+  &__name {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    width: 322px;
+    padding-left: 24px;
+    margin-top: 20px;
+    margin-bottom: 4px;
+  }
+  &__description {
+    color: $alternativeColor;
+    font-size: 16px;
+    line-height: 1.87;
+    width: 322px;
+    padding-left: 24px;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  &__overlay {
+    position: absolute;
+    width: 370px;
+    height: 294px;
+    padding: 49px 45px 49px 24px;
+    background-color: rgba(33, 150, 243, 0.9);
+    font-weight: 400;
+    font-size: 18px;
+    color: $secondaryColor;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    transition: transform 250ms ease;
+  }
+  &__item {
+    position: relative;
+    width: 370px;
+    height: 294px;
+    overflow: hidden;
+  }
 }
 
 .buttons {
@@ -77,6 +76,7 @@
     }
   }
 }
+
 .grid {
   width: 1170px;
   display: flex;
@@ -93,10 +93,9 @@
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 0px 0px 4px 4px;
+      & .products__overlay {
+        transform: translatey(0);
+      }
     }
   }
-}
-
-&:hover .products__overlay {
-  transform: translatey(0);
 }
