--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -10,3 +10,20 @@ $secondaryColor: #ffffff;
 $colorFiller: #afb1b8;
 $fontFamily: "Roboto", sans-serif;
 $boxShadowColor: #1869ac;
+
+@mixin underscoreAfterMixin($width) {
+  content: "";
+  display: block;
+  position: absolute;
+  width: $width;
+  height: 4px;
+  background-color: $logoWebColor;
+  border-radius: 2px;
+  margin-top: 28px;
+}
+
+@mixin navigationGeometryMixin($margin-left) {
+  display: flex;
+  flex: 1;
+  margin-left: $margin-left;
+}
