--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,8 @@
 @import "./utils/vars";
-@import "./utils/media";
+@import "./utils/media-mobile";
+@import "./utils/media-tablet";
+@import "./utils/media-desktop";
+@import "./utils/media-background-image";
 @import "./components/body";
 @import "./components/logo";
 @import "./components/page-header";
