--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,6 +7,8 @@
   text-decoration: none;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 .logo:hover,
 .logo:focus {
