--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -15,6 +15,30 @@
   margin: 0 auto;
   margin-bottom: 60px;
 }
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192pi),
+  (min-resolution: 2dppx) {
+  .main-page {
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("/images/header/Img-header_960_800.png");
+  }
+}
+@media (min-device-pixel-ratio: 3),
+  (min-resolution: 268pi),
+  (min-resolution: 3dppx) {
+  .main-page {
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("/images/header/Img-header_1440_1200.jpg");
+  }
+}
 
 .main-page__title {
   color: $secondaryColor;
