--- a/css/main.css
+++ b/css/main.css
@@ -1,108 +1,3 @@
-@media (max-width: 767px) {
-  .section-to-hide {
-    display: none;
-  }
-  .navigation-to-hide {
-    display: none;
-  }
-}
-@media (min-width: 768px) {
-  .container {
-    min-width: 768px;
-  }
-  .menu {
-    display: none;
-  }
-  .menu-container {
-    display: none;
-  }
-  .main-page {
-    min-width: 768px;
-    height: 400px;
-    background-color: #2f303a;
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_768_400.jpg");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_768_400.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 768px;
-    margin: 0 auto;
-    margin-bottom: 60px;
-  }
-}
-@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192pi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
-  .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_1536_800.png");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_1536_800.png");
-  }
-}
-@media (min-width: 768px) and (min-device-pixel-ratio: 3), (min-width: 768px) and (min-resolution: 268pi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 3), (min-width: 768px) and (min-resolution: 3dppx) {
-  .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_2304_1200.jpg");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_2304_1200.jpg");
-  }
-}
-@media (min-width: 768px) {
-  .section-to-hide {
-    display: none;
-  }
-}
-@media (min-width: 768px) {
-  .navigation-to-hide {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 101px;
-  }
-}
-@media (min-width: 768px) {
-  .navigation__item {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-@media (min-width: 768px) {
-  .page-header__overlay {
-    height: 80px;
-  }
-}
-@media (min-width: 768px) {
-  .block__list {
-    width: 738px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 30px;
-  }
-}
-@media (min-width: 768px) {
-  .block__item {
-    max-width: 354px;
-    -ms-flex-preferred-size: calc((100% - 30px) / 2);
-        flex-basis: calc((100% - 30px) / 2);
-  }
-}
-@media (min-width: 768px) {
-  .attribute {
-    max-width: 354px;
-  }
-}
-@media (min-width: 768px) {
-  .block__item:not(:last-child) {
-    margin-bottom: o;
-  }
-}
-@media (min-width: 768px) {
-  .attribute__title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 354px;
-  }
-}
 body {
   font-family: "Roboto", sans-serif;
   background-color: #e5e5e5;
@@ -150,6 +45,22 @@ h4 {
   margin: 0;
 }
 
+@media (max-width: 767px) {
+  .section-to-hide {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    min-width: 768px;
+  }
+  .menu-container {
+    display: none;
+  }
+  .section-to-hide {
+    display: none;
+  }
+}
 .logo {
   color: #000000;
   font-weight: 700;
@@ -331,6 +242,30 @@ h4 {
   color: #2196f3;
 }
 
+@media (max-width: 767px) {
+  .navigation-to-hide {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+  .navigation-to-hide {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 101px;
+  }
+  .navigation__item {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .page-header__overlay {
+    height: 80px;
+  }
+}
 .footer {
   background-color: #2f303a;
   padding-top: 60px;
@@ -631,6 +566,33 @@ h4 {
   margin: 0 auto;
 }
 
+@media (min-width: 768px) {
+  .main-page {
+    min-width: 768px;
+    height: 400px;
+    background-color: #2f303a;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_768_400.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_768_400.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 768px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+}
+@media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192pi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
+  .main-page {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_1536_800.png");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_1536_800.png");
+  }
+}
+@media (min-width: 768px) and (min-device-pixel-ratio: 3), (min-width: 768px) and (min-resolution: 268pi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 3), (min-width: 768px) and (min-resolution: 3dppx) {
+  .main-page {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_2304_1200.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_2304_1200.jpg");
+  }
+}
 .block {
   padding-bottom: 0;
   margin-bottom: 60px;
@@ -689,7 +651,7 @@ h4 {
   display: flex;
   margin-top: 30px;
   margin-bottom: 10px;
-  width: 270px;
+  min-width: 270px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -702,6 +664,35 @@ h4 {
   margin: 0;
 }
 
+@media (min-width: 768px) {
+  .block__list {
+    width: 738px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+    margin: 0 auto;
+  }
+  .block__item {
+    max-width: 354px;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+  .attribute {
+    max-width: 354px;
+  }
+  .block__item:last-child {
+    margin-bottom: 30px;
+  }
+  .attribute__title {
+    width: 354px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
 .aboutus {
   width: 1170px;
   margin: 0 auto;
@@ -879,6 +870,33 @@ h4 {
   fill: #ffffff;
 }
 
+@media (min-width: 768px) {
+  .ourteam {
+    width: 768px;
+  }
+  .ourteam__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 768px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+    margin-bottom: 60px;
+  }
+  .ourteam__item {
+    width: 354px;
+    height: 536px;
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+  .ourteam__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .ourteam__item:last-child {
+    margin-bottom: 0;
+  }
+}
 .our-clients {
   min-width: 450px;
   background-color: #ffffff;
@@ -898,6 +916,7 @@ h4 {
           justify-content: center;
 }
 .our-clients__headline {
+  width: 314px;
   margin-top: 0;
   margin-bottom: 50px;
 }
@@ -970,6 +989,44 @@ h4 {
   to {
     fill: #afb1b8;
     border: 1px solid #afb1b8;
+  }
+}
+@media (min-width: 768px) {
+  .our-clients__overlay {
+    width: 738px;
+    margin: 0 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .our-clients__list {
+    width: 738px;
+    gap: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .our-clients__item {
+    width: 226px;
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+  .our-clients__headline {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .modal {
