--- a/sass/components/_block.scss
+++ b/sass/components/_block.scss
@@ -35,7 +35,7 @@
   display: flex;
   margin-top: 30px;
   margin-bottom: 10px;
-  width: 270px;
+  min-width: 270px;
   justify-content: center;
 }
 .attribute__text {
@@ -43,4 +43,27 @@
   font-size: 14px;
   line-height: 1.71;
   margin: 0;
+}
+@media (min-width: 768px) {
+  .block__list {
+    width: 738px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 0 auto;
+  }
+  .block__item {
+    max-width: 354px;
+    flex-basis: calc((100% - 1 * 30px) / 2);
+  }
+  .attribute {
+    max-width: 354px;
+  }
+  .block__item:last-child {
+    margin-bottom: 30px;
+  }
+  .attribute__title {
+    width: 354px;
+    justify-content: flex-start;
+  }
 }
