--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -34,3 +34,22 @@ h4 {
   justify-content: center;
   margin: 0;
 }
+@media (max-width: 767px) {
+  .section-to-hide {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    min-width: 768px;
+  }
+
+  .menu-container {
+    display: none;
+  }
+
+  .section-to-hide {
+    display: none;
+  }
+}
