--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -70,3 +70,47 @@
   flex-direction: column;
   margin: 0 auto;
 }
+
+@media (min-width: 768px) {
+  .main-page {
+    min-width: 768px;
+    height: 400px;
+    background-color: $secondaryBackgroundColor;
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("/images/header/Img-header_768_400.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 768px;
+    margin: 0 auto;
+    margin-bottom: 60px;
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192pi),
+    (min-resolution: 2dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("/images/header/Img-header_1536_800.png");
+    }
+  }
+  @media (min-device-pixel-ratio: 3),
+    (min-resolution: 268pi),
+    (min-resolution: 3dppx) {
+    .main-page {
+      background-image: linear-gradient(
+          0deg,
+          rgba(47, 48, 58, 0.4) 0%,
+          rgba(47, 48, 58, 0.4) 100%
+        ),
+        url("/images/header/Img-header_2304_1200.jpg");
+    }
+  }
+}
