--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,19 @@ h4 {
   margin: 0;
 }
 
-@media (max-width: 767px) {
-  .section-to-hide {
+@media (min-width: 480px) {
+  .navigation,
+.contact,
+.aboutus {
     display: none;
   }
 }
 @media (min-width: 768px) {
+  .navigation,
+.contact,
+.aboutus {
+    display: none;
+  }
   .container {
     min-width: 768px;
   }
@@ -242,11 +249,6 @@ h4 {
   color: #2196f3;
 }
 
-@media (max-width: 767px) {
-  .navigation-to-hide {
-    display: none;
-  }
-}
 @media (min-width: 768px) {
   .menu {
     display: none;
@@ -504,8 +506,8 @@ h4 {
   width: 480px;
   height: 400px;
   background-color: #2f303a;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_480_400.png");
-  background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_480_400.png");
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_480_400.png");
+  background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_480_400.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -516,14 +518,14 @@ h4 {
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192pi), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_960_800.png");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_960_800.png");
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_960_800.png");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_960_800.png");
   }
 }
 @media (min-device-pixel-ratio: 3), (min-resolution: 268pi), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 3dppx) {
   .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_1440_1200.jpg");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_1440_1200.jpg");
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_1440_1200.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_1440_1200.jpg");
   }
 }
 .main-page__title {
@@ -571,8 +573,8 @@ h4 {
     min-width: 768px;
     height: 400px;
     background-color: #2f303a;
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_768_400.jpg");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_768_400.jpg");
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_768_400.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_768_400.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -583,14 +585,14 @@ h4 {
 }
 @media (min-width: 768px) and (min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 192pi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
   .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_1536_800.png");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_1536_800.png");
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_1536_800.png");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_1536_800.png");
   }
 }
 @media (min-width: 768px) and (min-device-pixel-ratio: 3), (min-width: 768px) and (min-resolution: 268pi), (min-width: 768px) and (-webkit-min-device-pixel-ratio: 3), (min-width: 768px) and (min-resolution: 3dppx) {
   .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("/images/header/Img-header_2304_1200.jpg");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("/images/header/Img-header_2304_1200.jpg");
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_2304_1200.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_2304_1200.jpg");
   }
 }
 .block {
