--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -34,13 +34,12 @@ h4 {
   justify-content: center;
   margin: 0;
 }
-@media (max-width: 767px) {
-  .section-to-hide {
-    display: none;
-  }
+@media (min-width: 480px) {
+  @include hide-on-mobile;
 }
 
 @media (min-width: 768px) {
+  @include hide-on-mobile;
   .container {
     min-width: 768px;
   }
