--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/vars";
+@import "./utils/mixin";
 @import "./components/body";
 @import "./components/logo";
 @import "./components/page-header";
